--- a/client/src/shared/ui/button/Button.module.css
+++ b/client/src/shared/ui/button/Button.module.css
@@ -7,3 +7,18 @@
   text-transform: none;
   font-weight: 500;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spin {
+  width: 25px;
+  height: 25px;
+  animation: spin 2s linear infinite;
+}
