--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,3 +1,11 @@
 .app {
-  padding: 4rem;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
+@media (min-width: 500px) {
+  .app {
+    padding: 4rem;
+    max-width: 80%;
+  }
 }
