--- a/client/src/shared/ui/button/Button.module.css
+++ b/client/src/shared/ui/button/Button.module.css
@@ -1,11 +1,7 @@
 .button {
-  border-radius: 50px;
-  cursor: pointer;
-  border: none;
-  background-color: #ffffff;
-  color: #000000;
-  text-transform: none;
+  border-radius: 100px;
   font-weight: 500;
+  text-transform: capitalize;
 }
 
 @keyframes spin {
