--- a/client/src/components/playlists/list/PlayListRow.module.css
+++ b/client/src/components/playlists/list/PlayListRow.module.css
@@ -3,17 +3,30 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #333;
-  padding: 0.75rem 0;
+  padding: 0.5rem 0;
+  text-decoration: none;
+  color: inherit;
+  transition: all 250ms;
+  position: relative;
 }
 
 .playListRow:last-child {
   border-bottom: none;
 }
 
+.playListLink {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .playListInfo {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 .playListTitle {
