--- a/client/src/components/playlists/create/PlayListCreateDialog.module.css
+++ b/client/src/components/playlists/create/PlayListCreateDialog.module.css
@@ -1,5 +1,12 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3rem;
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 0.75rem;
+  justify-content: flex-end;
+  margin-top: 2rem;
 }
