--- a/client/src/components/playlist/PlayList.module.css
+++ b/client/src/components/playlist/PlayList.module.css
@@ -2,35 +2,22 @@
   margin: 2rem 0;
 }
 
-.playListInfoBox {
-  display: flex;
-  flex-direction: column;
-  position: sticky;
-  top: 1rem;
-  text-align: center;
-}
-
 .title {
   font-size: 1.75rem;
   font-weight: bold;
   margin: 0.75rem 0 0.5rem;
 }
 
+.playListMeta,
 .playListMeta p {
   font-weight: 400;
-  margin: 0;
+  margin: 12px 0;
   color: #767676;
   font-size: 0.9rem;
 }
 
-.playListCover {
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-.playListCover img {
-  width: 100%;
-  height: 100%;
+.trackContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
