--- a/client/src/components/audio-player/AudioPlayer.module.css
+++ b/client/src/components/audio-player/AudioPlayer.module.css
@@ -4,7 +4,7 @@
   left: 0.5rem;
   right: 0.5rem;
   height: 5rem;
-  background-color: #333;
+  background-color: var(--secondary-color);
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -31,7 +31,7 @@
 }
 
 .trackArtist {
-  color: #767676;
+  color: var(--primary-color);
 }
 
 .sliderContainer {
