--- a/client/src/components/playlist/PlayList.module.css
+++ b/client/src/components/playlist/PlayList.module.css
@@ -12,7 +12,7 @@
 .playListMeta p {
   font-weight: 400;
   margin: 12px 0;
-  color: #767676;
+  color: var(--primary-color);
   font-size: 0.9rem;
 }
 
