--- a/client/src/components/playlists/list/PlayListRow.module.css
+++ b/client/src/components/playlists/list/PlayListRow.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--secondary-color);
   padding: 0.5rem 0;
   text-decoration: none;
   color: inherit;
@@ -35,6 +35,6 @@
 }
 
 .playListTracks {
-  color: #767676;
+  color: var(--primary-color);
   margin: 0;
 }
