--- a/client/src/components/tracks/TrackRow.module.css
+++ b/client/src/components/tracks/TrackRow.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   height: 5rem;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--secondary-color);
 }
 
 .trackRow .trackInfoContainer {
@@ -19,7 +19,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background: #333;
+  background: var(--secondary-color);
   box-shadow: 0;
   border: 0;
   margin-right: 1rem;
@@ -31,9 +31,9 @@
 }
 
 .trackArtist {
-  color: #767676;
+  color: var(--primary-color);
 }
 
 .trackLength {
-  color: #767676;
+  color: var(--primary-color);
 }
