add(test): more unit and integration tests

--- a/client/src/components/playlist/PlayList.module.css
+++ b/client/src/components/playlist/PlayList.module.css
@@ -2,6 +2,13 @@
   margin: 2rem 0;
 }
 
+.playListSticky {
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 1rem;
+}
+
 .title {
   font-size: 1.75rem;
   font-weight: bold;
